--- a/ecudump.vcxproj.filters
+++ b/ecudump.vcxproj.filters
@@ -1,3 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <ItemGroup>
+    <ClCompile Include="..\common\J2534.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="librx8.cpp" />
+    <ClCompile Include="util.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Docs">
+      <UniqueIdentifier>{80505dd4-3aff-4e9d-b44f-43aaac66b754}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="LICENSE.md">
+      <Filter>Docs</Filter>
+    </None>
+    <None Include="README.md">
+      <Filter>Docs</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="librx8.h" />
+    <ClInclude Include="util.h" />
+  </ItemGroup>
 </Project>
