j2534: optimize PASSTHRU_MSG usage
log: Add hexdump utility
log: Add log tags to librx8 and main

Signed-off-by: Connor Rigby <connorr@hey.com>

--- a/ecudump.vcxproj
+++ b/ecudump.vcxproj
@@ -100,6 +100,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="librx8.h" />
+    <ClInclude Include="OBD2.h" />
+    <ClInclude Include="UDS.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
