j2534: implement dumping ROM to file
Signed-off-by: Connor Rigby <connorr@hey.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Build output
 /Debug
 
-# visual studio stuff
+# visual studio (code) stuff
 .vs
+.vscode
 
 # build output for linux
 _build
@@ -11,3 +12,6 @@ ecudump
 
 # log files from the linux j2534 library
 *.log
+
+# rom dump output
+*.bin
