--- a/ecudump.vcxproj
+++ b/ecudump.vcxproj
@@ -62,6 +62,7 @@
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <AdditionalIncludeDirectories>C:\Users\konno\Desktop\rx8\ecu\ecudump\J2534;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)$(ProjectName).exe</OutputFile>
@@ -78,6 +79,7 @@
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>C:\Users\konno\Desktop\rx8\ecu\ecudump\J2534;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)$(ProjectName).exe</OutputFile>
@@ -89,20 +91,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\common\J2534.cpp" />
-    <ClCompile Include="librx8.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="util.cpp" />
+    <ClCompile Include="J2534\J2534.cpp" />
+    <ClCompile Include="src\librx8.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\progressbar.cpp" />
+    <ClCompile Include="src\util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE.md" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="librx8.h" />
-    <ClInclude Include="OBD2.h" />
-    <ClInclude Include="UDS.h" />
-    <ClInclude Include="util.h" />
+    <ClInclude Include="src\librx8.h" />
+    <ClInclude Include="src\OBD2.h" />
+    <ClInclude Include="src\UDS.h" />
+    <ClInclude Include="src\util.h" />
+    <ClInclude Include="src\progressbar.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
