disassembly: add nissutils for ghidra
Signed-off-by: Connor Rigby <connorr@hey.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/j2534"]
 	path = lib/j2534
 	url = git@github.com:dschultzca/j2534.git
+[submodule "disassembly/nissutils"]
+	path = disassembly/nissutils
+	url = git@github.com:fenugrec/nissutils.git
