UDS: fix updated UDS implementation
Signed-off-by: Connor Rigby <connorr@hey.com>

--- a/ecudump.vcxproj.filters
+++ b/ecudump.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="lib\getopt\getopt.c">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="src\UDS.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Docs">
