--- a/ecudump.vcxproj
+++ b/ecudump.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="src\librx8.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\progressbar.cpp" />
+    <ClCompile Include="src\UDS.cpp" />
     <ClCompile Include="src\util.cpp" />
   </ItemGroup>
   <ItemGroup>
